fix auth routes
